--- a/field_count_derive/Cargo.toml
+++ b/field_count_derive/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "field_count_derive"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["discosultan <jaanusvarus@gmail.com>"]
 edition = "2018"
 license-file = "../LICENSE"
-description = "Derive the field count of a struct"
+description = "Derive the field count for a struct"
 repository = "https://github.com/discosultan/field-count"
 readme = "../README.md"
 
